# mathocr

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/static/: index.html
