[project]
name = "mathocr"
version = "0.1.0"
description = "Simple FastAPI app that converts math images to LaTeX using an OpenAI-compatible API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.35.0",
]

[tool.uv]
package = false
